<resources>
    <string name="app_name">InventoryApp</string>
    <string name="in_stock">in stock</string>
    <string name="price">Price</string>
    <string name="euro">Euro</string>
    <string name="euro_sign">"€ "</string>
    <string name="empty_view_subtitle_text">Please add an item</string>
    <string name="money_sign">,-</string>
    <string name="empty_view_title_text">No item in storage</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete all entries</string>
    <string name="item_name_title">Item name:</string>
    <string name="item_price_title">Price:</string>
    <string name="supplier_name_title">Supplier:</string>
    <string name="supplier_email_title">Order email:</string>
    <string name="hint_item_name">item name</string>
    <string name="hint_price">price</string>
    <string name="currency">€</string>
    <string name="hint_supplier">supplier name</string>
    <string name="hint_supplier_email">order email</string>
    <string name="editor_activity_title_new_item">Add an item</string>
    <string name="editor_activity_title_edit_item">Edit item</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_insert_item_failed">Error with saving item</string>
    <string name="editor_insert_pet_successful">Item saved</string>
    <string name="editor_update_pet_failed">Error with updating item</string>
    <string name="editor_update_pet_successful">Item updated</string>
    <string name="delete_dialog_msg">Delete this pet?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_item_failed">Error with deleting item</string>
    <string name="editor_delete_item_successful">Item deleted</string>
    <string name="order_per_mail">Oder per mail</string>
    <string name="intentType">image/*</string>
    <string name="selectImage">Select Image</string>
    <string name="add_an_image">Add an image</string>
    <string name="requierd_item_name">Requierd item name</string>
    <string name="requierd_item_price">Requiered item price</string>
    <string name="requierd_item_supplier">Requiered item supplier</string>
    <string name="requierd_item_image">Requiered item image</string>
    <string name="requierd_item_supplier_email">Requiered item supplier email</string>
    <string name="item_saved">Item saved</string>
    <string name="add_an_item">Add an item</string>
    <string name="no_item_entry">No item entry in database</string>
</resources>
